<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout_tab_features"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_colour_bright"
    android:orientation="vertical"
    android:visibility="invisible">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Headers-->
        <TableRow>

            <TextView
                style="@style/button_layout_sidebyside"
                android:text="@string/features_header_tilt" />

            <View style="@style/divider_vertical_inverted"></View>

            <TextView
                style="@style/button_layout_sidebyside"
                android:text="@string/features_header_voice" />
        </TableRow>

        <!--Instructions-->
        <TableRow android:layout_marginTop="15dp">

            <TextView
                style="@style/text_sidebyside"
                android:text="@string/features_instructions_tilt" />

            <View
                style="@style/divider_vertical"
                android:layout_marginBottom="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"></View>

            <TextView
                style="@style/text_sidebyside"
                android:text="@string/features_instructions_voice" />
        </TableRow>

        <!--Spoken Text-->
        <TableRow>

            <TextView style="@style/text_sidebyside" />

            <View
                style="@style/divider_vertical"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"></View>

            <TextView
                android:id="@+id/features_textview_spokentext"
                style="@style/text_sidebyside"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/features_spokentext"
                android:textAlignment="textEnd" />
        </TableRow>

        <!--Shortcuts Button-->
        <TableRow>
            <!--Help-->
            <TextView style="@style/text_sidebyside" />

            <View
                style="@style/divider_vertical"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="0dp"></View>

            <Button
                android:id="@+id/features_button_go_to_commands"
                style="@style/button_layout_inverted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/features_go_to_command"
                android:textAlignment="textEnd"
                android:textSize="15sp" />
        </TableRow>

        <!--Activation-->
        <TableRow>

            <Switch
                android:id="@+id/features_switch_tilt"
                style="@style/button_layout_sidebyside"
                android:text="@string/features_header_tilt"
                android:textOff="@string/features_tilt_off"
                android:textOn="@string/features_tilt_on" />

            <View style="@style/divider_vertical_inverted"></View>

            <ImageButton
                android:id="@+id/features_button_voice"
                style="@style/button_layout_sidebyside"
                android:src="@drawable/features_voice_mic" />
        </TableRow>
    </TableLayout>
</LinearLayout>