<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout_tab_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <!--LHS (Control Panel)-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1.25"
            android:orientation="vertical">

            <!--Control Panel Header-->
            <TextView
                style="@style/text_header"
                android:layout_marginBottom="10dp"
                android:text="@string/main_control_panel" />

            <!--Control Panel-->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!--Left-->
                <ImageButton
                    android:id="@+id/control_button_left"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:src="@drawable/arrow_left" />

                <!--Right-->
                <ImageButton
                    android:id="@+id/control_button_right"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:src="@drawable/arrow_right" />

                <!--Down-->
                <ImageButton
                    android:id="@+id/control_button_down"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:src="@drawable/arrow_down" />

                <!--Up-->
                <ImageButton
                    android:id="@+id/control_button_up"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:src="@drawable/arrow_up" />
            </GridLayout>
        </LinearLayout>

        <!--Vertical Divider-->
        <View
            style="@style/divider_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"></View>

        <!--RHS (Functions)-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--Movement Mode Header-->
            <TextView
                style="@style/text_header"
                android:layout_marginBottom="10dp"
                android:text="@string/main_movement_mode" />

            <!--Manual Auto Switch-->
            <Switch
                android:id="@+id/main_switch_automanual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="false"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textOff="@string/main_switch_unchecked"
                android:textOn="@string/main_switch_checked" />

            <!--Manual Update Button-->
            <Button
                android:id="@+id/main_button_update"
                style="@style/button_layout_tabs_inverted"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/border"
                android:text="@string/main_update" />

            <!--Divider-->
            <View style="@style/divider_horizontal" />

            <!--Shortcuts Header-->
            <TextView
                style="@style/text_header"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/main_shortcuts" />

            <!--F1 and F2 Buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/main_button_f1"
                    style="@style/button_layout_inverted"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:text="@string/main_f1" />

                <Button
                    android:id="@+id/main_button_f2"
                    style="@style/button_layout_inverted"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:text="@string/main_f2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>